testdata/golden/hir_borrow/invalid/move_forbidden_when_borrowed.hir
error SEM3020 testdata/golden/hir_borrow/invalid/move_forbidden_when_borrowed.sg:4:21 cannot move 'x' while it is shared-borrowed

== HIR ==
module 

fn t() -> nothing (id=1, sym=682) {
  let x: string = "\"hi\""
  let r: &string [&] = (& x): &string
  let y: string = x
  return
}

borrow edges:
  L1365(r) (&) borrows L1364(x) at 0:56-58 scope=S3
events:
  borrow_start L1365(r) -> L1364(x) (&) at 0:56-58 scope=S3 note="B1"
  move L1364(x) at 0:80-81 scope=S3 note="issue=frozen borrow=B1"
  borrow_end L1365(r) -> L1364(x) scope=S3 note="scope_end B1"
move plan:
  L1364(x): MoveForbidden (move blocked by frozen (B1))
  L1365(r): MoveCopy (copy type)
  L1366(y): MoveNeedsDrop (non-copy (drop))

